# 3D-MRI-Brain-Tumor-Segmentation-with-Double-U-Net

./: .gitignore  DataLoader.ipynb  README.md  config.ini  dataset.py  inference.ipynb  pyproject.toml  requirements.txt  solver.py  test_unet_variants.py  testing.py  testing_3DUnet.py  testing_VAE.py  testing_double_u.py  testing_legacy.py  train.py  train_UNet3D.py  train_VAE.py  training.py  training_v2.py  visualization.ipynb  visualize_preds.py
.ipynb_checkpoints/: 3dUnet-checkpoint.ipynb
dataset/: 3dUnet.ipynb  DataLoader.ipynb  data.py  data_loader.py  data_loader2.py  train_data.csv  val_data.csv
dataset/.ipynb_checkpoints/: DataLoader-checkpoint.ipynb
experiments/: train.py
experiments/DoubleUnet/: double.yml  train_double.sh
experiments/Unet/: train_unet.sh  unet.yml
experiments/VAE/: test_vae.sh  train_vae.sh  vae.yml  vae_test.yml
experiments/VAEAblation/: test_vaeablation.sh  train_vaeablation.sh  vae_ablation_test.yml  vae_ablation_train.yml
experiments/global_configs/: config.yml
loss_functions/: dice_loss.py
models/: 3D_UNet.py  UNet3D_v1.py  VAE_net.py  double_u_net.py  loss.py  resnet.py  utils.py
notebooks/: Transformations.ipynb  debug_model.ipynb  visualization.ipynb
splits/: datasplit.json
src/dataset/: BraTSDataLightning.py  BraTSDataModule.py  BraTSDataset.py  BraTSDataset_Unet.py  data.py
src/lightningmodules/: BraTSLightning.py  BratsLightning.py  DoubleUnetLightning.py  UnetLightning.py  VAEAblationLightning.py  VAELightning.py
src/losses/: DiceLoss.py  KLDivergenceIndGaussian.py  UNet3D_Loss.py  VAELoss.py  _dice_loss_debug.py
src/metrics/: metrics.py
src/models/: DoubleUnet_Lightning.py  UNet3D_Lightning.py  UNet3D_v1.py  UNet3D_v2.py  VAELightning.py  VAE_net.py  double_u_net.py  resnet.py  utils.py
trained_models/3D-UNet/experiment_1/: hparams.txt  train_log.csv
trained_models/3D-UNet/experiment_2/: hparams.txt  train_log.csv
trained_models/3D-UNet/experiment_3/: train_log.csv
trained_models/3D-UNet/experiment_5/: train_log.csv
utils/: data_splitter.py
