[tool.poetry]
name = "ml3d_project"
version = "1.1"
description = "requirements for ml3d project"
authors = ["Arda Mamur, Yusuf Can Aydemir, Emre Kavak"]

[tool.poetry.dependencies]
python = "3.8.10"
nibabel = "5.0.0"
albumentations = "1.3.0"
jupyter = "^1.0.0"
matplotlib = "^3.4.1"
scikit-image = "^0.18.1"
pillow = "^7.2.0"
tqdm = "^4.48.2"
scipy = "^1.4.1"
numpy = "^1.19.4"
pandas = "1.5.2"
ipywidgets = "7.7.1"
jupyterlab-widgets = "1.1"
jupyterlab = "^3.5.1"
lightning = "^1.9.0"
pytorch-lightning = "^1.9.0"
monai = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
