[tool.poetry]
name = "ML3D Project"
version = "1.1"
description = "ML3D project"
authors = ["Arda Mamur, Emre Kavak, Yusuf Can Aydemir"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
matplotlib = "^3.4.1"
torch = "^1.8.1"
pytorch-lightning = "^1.2.8"
scikit-image = "^0.18.1"
pillow = "^7.2.0"
tqdm = "^4.48.2"
scipy = "^1.4.1"
numpy = "^1.19.4"
ipywidgets = "7.7.1"
jupyterlab-widgets = "1.1"
jupyterlab = "^3.5.1"
lightning = "^1.9.0"
pytorch-lightning = {extras = ["extra"], version = "^1.9.0"}
monai = "^1.1.0"
torchio = "^0.18.86"
tensorboard = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
